# review-intelligence

./: .gitignore  README.md  app.py  environment.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: report.tex
results/: sentiment_finetune.json
scripts/: 01_pipeline_baseline.py  02_behind_the_pipeline.py  03_finetune_sentiment.py
src/review_intelligence/: __init__.py  baseline.py  train.py
tests/: test_baseline.py  test_unit.py
