[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "review-intelligence"
version = "0.1.0"
description = "NLP toolkit for analyzing customer reviews with Transformers"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Rahiq Raees" }]
license = { text = "MIT" }
dependencies = [
    "torch",
    "transformers>=4.40,<5",
    "accelerate>=0.26",
    "datasets",
    "pandas",
    "scikit-learn",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]
demo = ["gradio>=5,<6"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: tests that download and run real models (skipped in CI with -m 'not slow')",
]
